[package]
name = "aoc-22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
num = "0.4.0"
petgraph = "0.6.2"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"

[features]
